--- a/documents/Probabilidad/main.tex
+++ b/documents/Probabilidad/main.tex
@@ -32,4 +32,6 @@
     \input{Ejercicios_Clase_7.tex}
     \newpage
     \input{Ejercicios_Clase_8.tex}
+    \newpage
+    \input{Ejercicios_Clase_9.tex}
 \end{document}
