--- a/documents/Probabilidad/Ejercicios_Clase_9.tex
+++ b/documents/Probabilidad/Ejercicios_Clase_9.tex
@@ -1,7 +1,7 @@
 \section{Trabajo de clase del lunes 11 de Noviembre de 2024}
  
 \begin{ejercicio}
-    Se extraen sucesivamente sin reemplazamiento dos bolas de una urna que contiene tres bolas blancas y tres negras En relación a este experimento se definen las siguientes variables:
+    Se extraen sucesivamente sin reemplazamiento dos bolas de una urna que contiene tres bolas blancas y dos negras En relación a este experimento se definen las siguientes variables:
 
     \begin{align*}
         X= \left\{
@@ -72,7 +72,7 @@
         f(y/x) = \frac{f(x,y)}{f_X(x)} = \frac{2}{2(x-1)} = \frac{1}{x-1} \ \ 0<x<1\\
         E[Y/X] = \int_x^1 y \cdot f(y/x) dy =  \int_x^1 y \cdot \frac{1}{x-1} dy= \frac{1}{x} \cdot \frac{1-x^2}{2} = \frac{1+x}{2} \Rightarrow \frac{1+X}{2}\ \ 0<X<1 
     \end{gather*}
-\end{ejercicio}ç
+\end{ejercicio}
 
 \begin{ejercicio} Del lanzamiento de 3 monedas se consideran las variables:
     \begin{align*}
