--- a/documents/Probabilidad/main.tex
+++ b/documents/Probabilidad/main.tex
@@ -34,4 +34,6 @@
     \input{Ejercicios_Clase_8.tex}
     \newpage
     \input{Ejercicios_Clase_9.tex}
+    \newpage
+    \input{Ejercicios_Clase_10.tex}
 \end{document}
