--- a/documents/Probabilidad/main.tex
+++ b/documents/Probabilidad/main.tex
@@ -36,4 +36,6 @@
     \input{Ejercicios_Clase_9.tex}
     \newpage
     \input{Ejercicios_Clase_10.tex}
+    \newpage
+    \input{Ejercicios_Clase_11.tex}
 \end{document}
